# DingoEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  ToDo.txt  init_win.bat
HelperScripts/: addFileToEngine.py  checkHeaderComment.py  formatAllCode.py  parseC.py  parseC.spec  paths.py
include/: DG_Camera.h  DG_Clock.h  DG_GraphicsSystem.h  DG_Include.h  DG_InputSystem.h  DG_Job.h  DG_Mesh.h  DG_Primitives.h  DG_Profiler.h  DG_ResourceHelper.h  DG_SDLHelper.h  DG_Shader.h  DG_Transform.h  DG_Windows.h  imgui_impl_sdl_gl3.h
include/misc/: DG_Include.h  DG_Windows.h
shaders/: base_model.fs  base_model.vs  billboard_font.fs  billboard_font.vs  debug_lines.vs  fragment_shader.fs  fragment_shader_debug_lines.fs  fragment_shader_font.fs  screen_font.fs  screen_font.vs  shadow_map.fs  shadow_map.vs  vertex_shader.vs
src/: Actor.cpp  Actor.h  BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  DG_BoundingBox.cpp  DG_BoundingBox.h  DG_Camera.cpp  DG_Camera.h  DG_Clock.cpp  DG_FontGenerator.cpp  DG_FontGenerator.h  DG_Framebuffer.cpp  DG_Framebuffer.h  DG_GameObject.cpp  DG_GameObject.h  DG_GameWorld.cpp  DG_GameWorld.h  DG_GraphicsSystem.cpp  DG_InputSystem.cpp  DG_InputSystem.h  DG_Job.cpp  DG_Mesh.h  DG_Messaging.cpp  DG_Messaging.h  DG_ModelManager.cpp  DG_ModelManager.h  DG_Physics.cpp  DG_Physics.h  DG_Primitives.h  DG_Profiler.cpp  DG_ResourceHelper.cpp  DG_ResourceHelper.h  DG_ResourceManager.cpp  DG_ResourceManager.h  DG_SDLHelper.cpp  DG_StringId.cpp  DG_StringId.h  DG_StringIdCRC32.h  (+37 more)
src/components/: BaseComponent.cpp  BaseComponent.h  ComponentStorage.cpp  ComponentStorage.h  RenderableComponent.cpp  RenderableComponent.h  SceneComponent.cpp  SceneComponent.h  StaticMeshComponent.h  TransformComponent.cpp  TransformComponent.h
src/engine/: Camera.cpp  Camera.h  GameWorld.cpp  GameWorld.h  Messaging.cpp  Messaging.h  ModelManager.cpp  ModelManager.h  Serialize.cpp  Serialize.h  Type.h  Types.h  WorldEditor.cpp  WorldEditor.h
src/gameobjects/: Actor.cpp  Actor.h
src/graphics/: DG_Font.cpp  DG_Font.h  DG_GLTFSceneManager.cpp  DG_GLTFSceneManager.h  DG_GraphicsSystem.cpp  DG_GraphicsSystem.h  DG_Mesh.cpp  DG_Mesh.h  DG_Shader.cpp  DG_Shader.h  DG_ShaderManager.cpp  DG_ShaderManager.h  DG_Texture.cpp  DG_Texture.h  Font.cpp  Font.h  FrameData.cpp  FrameData.h  Framebuffer.cpp  Framebuffer.h  GLTFSceneManager.cpp  GLTFSceneManager.h  GameWorldWindow.cpp  GameWorldWindow.h  GraphicsSystem.cpp  GraphicsSystem.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  Viewport.cpp  Viewport.h
src/imgui/: DG_Imgui.cpp  DG_Imgui.h  imgui_dock.cpp  imgui_dock.h  imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h
src/math/: BoundingBox.cpp  BoundingBox.h  GLMInclude.h  Transform.cpp  Transform.h
src/memory/: Memory.cpp  Memory.h
src/misc/: Clock.cpp  Clock.h  DG_Clock.cpp  DG_Clock.h  DG_Include.h  DG_Memory.cpp  DG_Memory.h  DG_Messaging.cpp  DG_Messaging.h  DG_Profiler.cpp  DG_Profiler.h  DG_ResourceManager.h  DG_SDLHelper.cpp  DG_Windows.h  Messaging.cpp  Messaging.h  ResourceManager.cpp  ResourceManager.h  SDLHelper.cpp  SDLHelper.h  StringIdCRC32.h  imgui_impl_sdl_gl3.cpp
src/physics/: Physics.cpp  Physics.h
src/platform/: BitOperations.cpp  BitOperations.h  Clock.cpp  Clock.h  ConditionVariable.cpp  ConditionVariable.h  Delegate.h  InputSystem.cpp  InputSystem.h  Job.cpp  Job.h  ResourceHelper.cpp  ResourceHelper.h  ResourceManager.cpp  ResourceManager.h  SDLHelper.cpp  SDLHelper.h  StringIdCRC32.h
